# web-full-stack

./: .gitignore  README.md  conda-env.yml  condaenv.yml  docker-compose.yml
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  main.py
backend/app/api/routes/: login.py  users.py
backend/app/core/: config.py  db.py  security.py
backend/app/crud/: auth.py  users.py
backend/app/models/: __init__.py  users.py
frontend/: README.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/components/: SignInCard.tsx
frontend/src/components/common/: navbar.tsx  notfound.tsx  topbar.tsx
frontend/src/components/loginNsignup/: logincard.tsx  signupcard.tsx
frontend/src/core/api/: api-config.ts  api-error.ts  api-request.ts
frontend/src/core/api/api-services/: auth-service.ts  user-service.ts
frontend/src/core/hooks/: useAuth.ts
frontend/src/core/models/: users.ts
frontend/src/core/utils/: types.ts
frontend/src/routes/: __root.tsx  _dashboard.tsx  _layout.tsx  index.tsx  login.tsx  register.tsx
frontend/src/routes/_dashboard/: summary.tsx
frontend/src/styles/: theme.tsx
